--- a/Formulario.html
+++ b/Formulario.html
@@ -1,55 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
+<style>
+    .cabecalho1 {
+        display: flexbox;
+    }
+
+    .causas {
+        font-family: 'Fira Sans', sans-serif;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 25px;
+        column-count: 2;
+    }
+</style>
+
 <body>
-    Dados do Paciente
-    Data
-    Sexo
-    Nome
-    Idade
-    Fone
-    RG/CPF Paciente
-    Acompanhante
-    idade
-    Local da Ocorrência
+    <div class="cabecalho1">
+        Dados do Paciente<br>
+        Data
+        Sexo
+        Nome do Hospital<br>
+        Nome
+        Idade<br>
+        Fone
+        RG/CPF Paciente<br>
+        Acompanhante
+        idade<br>
+        Local da Ocorrência
+    </div><br>
 
-    Dados Ambulância
-    N° USD.
-    CÓD. IR
-    N° OCORR.
-    CÓD. PS
-    DESP
-    H. CH.
-    KM FINAL
-    CÓD. SIA/SUS
+    <div>
+        Dados Ambulância<br>
+        N° USD.
+        CÓD. IR<br>
+        N° OCORR.
+        CÓD. PS<br>
+        DESP<br>
+        H. CH.<br>
+        KM FINAL<br>
+        CÓD. SIA/SUS
+    </div><br>
 
-    TIPO DE OCORRÊNCIA (PRÉ-HOSPITALAR)
-    CAUSADO POR ANIMAIS
-    COM MEIO DE TRANSPORTE
-    DESMORONAMENTO/DESLIZAMENTO
-    EMERGÊNCIA MÉDICA
-    QUEDA DE ALTURA 2M
-    TENTATIVA DE SUICÍDIO
-    QUEDA PRÓPRIA ALTURA
-    AFOGAMENTO
-    AGRESSÃO
-    ATROPELAMENTO
-    CHOQUE ELÉTRICO
-    DESABAMENTO
-    DOMÉSTICO
-    ESPORTICO
-    INTOXICAÇÃO
-    QUEDA DE BICICLETA
-    QUEDA MOTO
-    QUEDA NÍVEL 2M
-    TRABALHO
-    TRANSFERÊNCIA
-    OUTRO
+    <div>TIPO DE OCORRÊNCIA (PRÉ-HOSPITALAR) <br>
+        <div class="causas">
+            <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+            <label for="vehicle1">CAUSADO POR ANIMAIS</label><br>
+            <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+            <label for="vehicle1">COM MEIO DE TRANSPORTE</label><br>
+            <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+            <label for="vehicle1">DESMORONAMENTO/DESLIZAMENTO</label><br>
+            <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+            <label for="vehicle1">EMERGÊNCIA MÉDICA</label><br>
+            <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+            <label for="vehicle1">QUEDA DE ALTURA 2M</label><br>
+            <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+            <label for="vehicle1">TENTATIVA DE SUICÍDIO</label><br>
+            <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+            <label for="vehicle1">QUEDA PRÓPRIA ALTURA</label><br>
+            <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+            <label for="vehicle1">AFOGAMENTO</label><br>
+            <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+            <label for="vehicle1">AGRESSÃO</label><br>
+            <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+            <label for="vehicle1">ATROPELAMENTO</label><br>
+            <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+            <label for="vehicle1">CHOQUE ELÉTRICO</label><br>
+            <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+            <label for="vehicle1">DESABAMENTO</label><br>
+            <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+            <label for="vehicle1">DOMÉSTICO</label><br>
+            <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+            <label for="vehicle1">ESPORTICO</label><br>
+            <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+            <label for="vehicle1">INTOXICAÇÃO</label><br>
+            <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+            <label for="vehicle1">QUEDA DE BICICLETA</label><br>
+            <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+            <label for="vehicle1">QUEDA MOTO</label><br>
+            <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+            <label for="vehicle1">QUEDA NÍVEL 2M</label><br>
+            <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+            <label for="vehicle1">TRABALHO</label><br>
+            <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+            <label for="vehicle1">TRANSFERÊNCIA</label><br>
+            <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+            <label for="vehicle1">OUTRO</label>
+        </div>
+    </div><br>
 
-    AVALIAÇÃO DO PACIENTE (GLASGOW)
+    <div>AVALIAÇÃO DO PACIENTE (GLASGOW)</div>
 </body>
+
 </html>
