--- a/login.html
+++ b/login.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<script>
+    
+</script>
 <body>
     <div class="fundo">
         <img src="fundo.jpg">
