--- a/login.html
+++ b/login.html
@@ -5,12 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<script>
-    
-</script>
+<style>
+    body { 
+        height: 100vh;
+        background-size: cover;
+        background-position: center;
+        background-image: url(https://i.pinimg.com/originals/31/35/1f/31351f8c818873e34cea2311b160c867.jpg);
+}
+    .log{
+        background-color: rgba(255, 255, 255, 0.911);
+        border-radius: 10px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        width: 300px;
+        height: 300px;
+    }
+</style>
 <body>
-    <div class="fundo">
-        <img src="fundo.jpg">
+        <div class="log">Login</div>
     </div>
 </body>
 </html>
