--- a/bombeiroSa/login.html
+++ b/bombeiroSa/login.html
@@ -17,7 +17,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        background-image: url(https://i.pinimg.com/originals/31/35/1f/31351f8c818873e34cea2311b160c867.jpg);
+        background-image: url();
     }
 
     .form-box {
