--- a/bombeiroSa/ficha.html
+++ b/bombeiroSa/ficha.html
@@ -268,6 +268,7 @@
         </div>
     </div>
     <form>
+        
         <div class="qa">
             <div class="ddp">
                 <h1>Bombeiros Voluntários</h1>
@@ -277,7 +278,9 @@
                 <div class="cabecalho">
                     <form class="form">
                         <div class="form-group">
-                            <div class="titulo">Dados Iniciais</div>
+           
+                            <fieldset>
+            <legend>Dados Iniciais</legend>
                             <div class="dsn">
                                 <div>
                                     <label for="data">Data:</label>
@@ -328,6 +331,7 @@
                                     placeholder="Digite o local da ocorrência" required />
                             </div>
                         </div>
+                    </fieldset>
 
                         <div class="form-box">
                             <div class="titulo">Dados Ambulância</div>
