--- a/bombeiroSa/hist.html
+++ b/bombeiroSa/hist.html
@@ -458,11 +458,13 @@
                                 </div>
                                 <div><input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
                                     <label for="vehicle1">CELESC</label>
-                                    <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
-                                    <label for="vehicle1">Polícia</label>
                                 </div>
                                 <div><input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
                                     <label for="vehicle1">Def. civil</label>
+                                </div>
+                                <div>
+                                    <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+                                    <label for="vehicle1">Polícia</label>
                                     <div class="cmpp">
                                         <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
                                         <label for="vehicle1">Civil</label>
