--- a/bombeiroSa/ficha.html
+++ b/bombeiroSa/ficha.html
@@ -16,10 +16,17 @@
         font-size: 16px;
     }
 
+        
+    html {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
     .header {
         background: linear-gradient(28deg, rgba(255, 239, 51, 0.8463760504201681) 0%, rgba(218, 75, 44, 1) 47%, rgba(94, 0, 0, 1) 100%);
         color: #fff;
-        padding: 15px;
+        padding: 30px;
         text-align: center;
     }
 
@@ -376,12 +383,12 @@
             <img src="logos.png" width="45%">
         </div>
     </div>
-    <div class="button-group">
+    <!-- <div class="button-group">
         <button class="button"><a href="#Anamnese">Anamnese</a></button>
         <button class="button"><a href="#Dadosiniciais">Dados Iniciais</a></button>
-        <button class="button"><a href="#Dadosamb">Dados Ambulância</a></button>
+         <button class="button"><a href="#Dadosamb">Dados Ambulância</a></button>
         <button class="button"><a href="#Tipoocor">Tipo de Ocorrência</a></button>
-        <button class="button"><a href="#Glasgow">Glasgow</a></button>
+        <button class="button"><a href="#Glasgow">Glasgow</a></button> -->
     </div>
     <div>
         <button class="button"><a href="#Sinaisvitais">Sinais Vitais</a></button>
@@ -389,7 +396,7 @@
         <button class="button"><a href="hist.html">Histórico</a></button>
         <button class="button"><a href="ficha.html">Ficha</a></button>
         <button class="button"><a href="hist.html">Histórico</a></button> -->
-    </div>
+    </div> -->
     <form>
 
         <div class="qa">
@@ -404,7 +411,7 @@
 
                             <fieldset>
                                 <legend id="Anamnese">Anamnese da Emergência Médica</legend>
-                                <div class="qa">
+                                <div class="">
 
                                     <div>O que aconteceu (sinais e sintomas)</div>
                                     <div><input class="oa" type="text" id="oq-aconteceu" name="oq-aconteceu"
