--- a/bombeiroSa/ficha.html
+++ b/bombeiroSa/ficha.html
@@ -364,7 +364,7 @@
         <button class="button"><a href="ficha.html">Ficha</a></button>
         <button class="button"><a href="hist.html">Histórico</a></button> -->
     </div> -->
-    <form>
+    <form action="php" method="POST">
 
         <div class="qa">
             <div class="ddp">
