--- a/bombeiroSa-1/ficha.html
+++ b/bombeiroSa-1/ficha.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, maximum-scale=1.0">
     <title>Dados da Ocorrência</title>
 </head>
 
@@ -21,7 +21,6 @@
     .header {
         background: linear-gradient(28deg, rgba(255, 239, 51, 0.8463760504201681) 0%, rgba(218, 75, 44, 1) 47%, rgba(94, 0, 0, 1) 100%);
         color: #fff;
-        padding: 30px;
         text-align: center;
     }
 
@@ -342,30 +341,32 @@
 
     @import url(tiny.css) (min-width:300px);
     @import url(small.css) (min-width:600px);
-    @import url(big.css) (min-width:900px);
+    @import url(big.css) (min-width:700px);
 </style>
 
 <body>
     <div class="header">
         <div class="imgg">
-            <img src="logos.png" width="45%">
+            <img src="logos.png" width="35%">
         </div>
+       
     </div>
-    <!-- <div class="button-group">
+     <br>
+        <br>
+    <div class="button-group">
         <button class="button"><a href="#Anamnese">Anamnese</a></button>
         <button class="button"><a href="#Dadosiniciais">Dados Iniciais</a></button>
-         <button class="button"><a href="#Dadosamb">Dados Ambulância</a></button>
+         <!-- <button class="button"><a href="#Dadosamb">Dados Ambulância</a></button> -->
         <button class="button"><a href="#Tipoocor">Tipo de Ocorrência</a></button>
-        <button class="button"><a href="#Glasgow">Glasgow</a></button> -->
+        <!-- <button class="button"><a href="#Glasgow">Glasgow</a></button> -->
     </div>
     <div>
-        <button class="button"><a href="#Sinaisvitais">Sinais Vitais</a></button>
+        <!-- <button class="button"><a href="#Sinaisvitais">Sinais Vitais</a></button> -->
         <!-- <button class="button"><a href="ficha.html">Ficha</a></button>
         <button class="button"><a href="hist.html">Histórico</a></button>
         <button class="button"><a href="ficha.html">Ficha</a></button>
         <button class="button"><a href="hist.html">Histórico</a></button> -->
-    </div> -->
-    <form action="php" method="POST">
+    </div>
 
         <div class="qa">
             <div class="ddp">
@@ -2632,7 +2633,7 @@
         </div>
     </form>
 
-    <script>
+    <!-- <script>
             var buttons = document.querySelectorAll(".b1");
     var anamneseFieldset = document.querySelector(".b
 
@@ -2657,7 +2658,7 @@
             anamneseFieldset.style.display = "block";
         });
     }
-    </script>
+    </script> -->
 </body>
 
 </html>
