--- a/bombeiroSa-1/login.html
+++ b/bombeiroSa-1/login.html
@@ -1,138 +1,132 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login</title>
+    <style>
+        body {
+            margin-top: -90px;
+            margin-bottom: 90px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-image: linear-gradient(0deg, hsl(0deg 84% 36%) 3%, hsl(42deg 78% 57%) 12%, hsl(46deg 86% 77%) 16%, rgba(160, 161, 161, 0.144) 24%);
+        }
+
+        .logo {
+            text-align: center;
+            margin-bottom: 20px;
+            opacity: 0.7;
+        }
+
+        .container {
+            max-width: 350px;
+            background: #F8F9FD;
+            background: linear-gradient(0deg, rgb(255, 255, 255) 0%, rgb(244, 247, 251) 100%);
+            border-radius: 40px;
+            padding: 25px 35px;
+            border: 5px solid rgb(255, 255, 255);
+            box-shadow: rgba(218, 76, 44, 0.37) 0px 30px 30px -20px;
+            margin: 20px;
+            margin-bottom: 100px;
+        }
+
+        .heading {
+            text-align: center;
+            font-weight: 900;
+            font-size: 30px;
+            color: rgba(218, 75, 44, 1);
+        }
+
+        .form {
+            margin-top: 10px;
+        }
+
+        .form .input {
+            width: 90%;
+            background: white;
+            border: none;
+            padding: 15px 20px;
+            border-radius: 20px;
+            margin-top: 15px;
+            box-shadow: rgba(218, 76, 44, 0.37) 0px 10px 10px -5px;
+            border-inline: 2px solid transparent;
+        }
+
+        .form .input::-moz-placeholder {
+            color: rgb(170, 170, 170);
+        }
+
+        .form .input::placeholder {
+            color: rgb(170, 170, 170);
+        }
+
+        .form .input:focus {
+            outline: none;
+            border-inline: 2px solid #12B1D1;
+        }
+
+        .form .forgot-password {
+            display: block;
+            margin-top: 15px;
+            text-align: center;
+            font-size: 20px;
+        }
+
+        .form .forgot-password a {
+            font-size: 11px;
+            color: rgba(218, 75, 44, 1);
+            text-decoration: none;
+        }
+
+        .form .login-button {
+            display: block;
+            width: 100%;
+            font-weight: bold;
+            background: linear-gradient(28deg, rgba(255, 239, 51, 0.8463760504201681) 0%, rgba(218, 75, 44, 1) 47%, rgba(94, 0, 0, 1) 100%);
+            color: white;
+            padding-block: 15px;
+            margin: 20px auto;
+            border-radius: 20px;
+            box-shadow: rgba(218, 76, 44, 0.582) 0px 10px 10px -5px;
+            border: none;
+            transition: all 0.2s ease-in-out;
+        }
+
+        .form .login-button:hover {
+            transform: scale(1.03);
+            box-shadow: rgba(218, 75, 44, 1) 0px 23px 10px -20px;
+        }
+
+        .form .login-button:active {
+            transform: scale(0.95);
+            box-shadow: rgba(218, 76, 44, 0.37) 0px 15px 10px -10px;
+        }
+
+        a {
+            color: white;
+            text-decoration: none;
+        }
+
+    </style>
 </head>
-<style>
-    body {
-        margin: 0;
-    }
-
-    .fundo {
-        height: 100vh;
-        background-size: cover;
-        /* Torna a imagem responsiva */
-        background-position: center;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-image: url(fundo.png);
-    }
-
-    .form-box {
-        max-width: 300px;
-        background: #d7e8fc;
-        overflow: hidden;
-        border-radius: 16px;
-        color: #010101;
-    }
-
-    .form {
-        position: relative;
-        padding: 32px 24px 24px;
-        gap: 16px;
-        text-align: center;
-        justify-content: center;
-        position: relative;
-        display: flex;
-        flex-direction: column;
-        padding: 32px 24px 24px;
-        gap: 16px;
-    }
-
-    /*Form text*/
-    .title {
-        font-weight: bold;
-        font-size: 1.6rem;
-    }
-
-    .subtitle {
-        font-size: 1rem;
-        color: #666;
-    }
-
-    /*Inputs box*/
-    .form-container {
-        overflow: hidden;
-        border-radius: 8px;
-        background-color: #fff;
-        margin: 1rem 0 .5rem;
-        width: 100%;
-    }
-
-    .input {
-        background: none;
-        border: 0;
-        outline: 0;
-        height: 40px;
-        width: 100%;
-        border-bottom: 1px solid #eee;
-        font-size: .9rem;
-        padding: 8px 15px;
-    }
-
-    .form-section {
-        padding: 16px;
-        font-size: .85rem;
-        background-color: #c1ddff;
-        box-shadow: rgb(0 0 0 / 8%) 0 -1px;
-    }
-
-    .form-section a {
-        font-weight: bold;
-        color: #0066ff;
-        transition: color .3s ease;
-    }
-
-    .form-section a:hover {
-        color: #005ce6;
-        text-decoration: underline;
-    }
-
-    /*Button*/
-    .form button {
-        background-color: #0066ff;
-        color: #fff;
-        border: 0;
-        border-radius: 24px;
-        padding: 10px 16px;
-        font-size: 1rem;
-        font-weight: 600;
-        cursor: pointer;
-        transition: background-color .3s ease;
-    }
-
-    a {
-        color: white;
-        text-decoration: none;
-    }
-
-    .form button:hover {
-        background-color: #e64900;
-    }
-</style>
 
 <body>
-
-    <div class="fundo">
-        <div class="form-box">
-            <form class="form">
-                <span class="title">Entrar</span>
-                <span class="subtitle">Bem vindo, necessário login </span>
-                <div class="form-container">
-                    <input type="text" class="input" placeholder="Nome">
-                    <input type="email" class="input" placeholder="Matrícula">
-                    <input type="password" class="input" placeholder="Password">
-                </div>
-                <button><a href="perfil.html">Entrar</a></button>
-            </form>
-            <div class="form-section">
-                <p>Algo de errado? <a href="">Click aqui</a> </p>
-            </div>
-        </div>
+    <div class="logo">
+        <img src="logos.png" width="60%"/>
+    </div>
+    <div class="container">
+        <div class="heading">Login</div>
+        <form action="" class="form">
+            <input required="" class="input" type="email" name="email" id="email" placeholder="E-mail">
+            <input required="" class="input" type="password" name="password" id="password" placeholder="Senha">
+            <span class="forgot-password"><a href="#">Forgot Password ?</a></span>
+            <button class="login-button" type="submit" value="Entrar"><a href="perfil.html">Entrar</a></button>
+        </form>
     </div>
 </body>
 
