--- a/bombeiroSa/perfil.html
+++ b/bombeiroSa/perfil.html
@@ -159,6 +159,59 @@
         width: auto;
         height: 40px;
     }
+
+    .search-container {
+        display: none;
+        justify-content: center;
+        align-items: center;
+        height: 50px;
+        margin-top: 20px;
+        /* Adicionei um espaço entre os botões e a barra de pesquisa */
+    }
+
+    .search-input {
+        max-width: 190px;
+        height: 50%;
+        outline: none;
+        font-size: 14px;
+        font-weight: 500;
+        background-color: #e74d3cec;
+        caret-color: #f7f7f8;
+        color: #fff;
+        padding: 7px 10px;
+        border: 2px solid transparent;
+        border-top-left-radius: 7px;
+        border-bottom-left-radius: 7px;
+        margin-right: 1px;
+        transition: all .2s ease;
+    }
+
+    .search-input:hover {
+        border: 2px solid rgba(255, 255, 255, 0.16);
+    }
+
+    .search-input:focus {
+        border: 2px solid #a970ff;
+        background-color: #e74c3c;
+    }
+
+    .search-button {
+        border: none;
+        cursor: pointer;
+        background-color: #e74c3c;
+        border-top-right-radius: 7px;
+        border-bottom-right-radius: 7px;
+        height: 86%;
+        width: 30px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .search-button:hover {
+        background-color: white;
+    }
+
     .ui {
         opacity: 0.1;
         justify-content: center;
@@ -179,12 +232,54 @@
     <div class="button-group">
         <button class="button"><a href="ficha.html">Nova Ficha</a></button>
         <button class="button">Histórico de Ficha</button>
-        <button class="button">Pesquisar</button>
+        <!-- Botão de Pesquisar com barra de pesquisa abaixo dos botões -->
+
     </div>
     <div class="ui">
-        <img src="logos.png" width="70%"/>
+        <img src="logos.png" width="70%" />
     </div>
 
+    <div class="button-group">
+        <div class="tab">
+            <button class="button" onclick="openCity(event, 'Nova')">Nova Ficha</button>
+            <button class="button" onclick="openCity(event, 'Historico')">Histórico de Ficha</button>
+            <button class="button" onclick="openCity(event, 'Pesquisar')">Pesquisar</button>
+        </div>
+    </div>
+
+    <!-- Tab content -->
+    <div id="Nova" class="tabcontent">
+
+    </div>
+
+    <div id="Historico" class="tabcontent">
+
+    </div>
+
+        <button class="button" onclick="toggleSearch()">Pesquisar</button>
+        <div class="search-container" id="searchContainer">
+            <input type="text" class="search-input" placeholder="Pesquisar">
+            <button class="search-button">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="22" height="22">
+                    <path
+                        d="M18.031 16.6168L22.3137 20.8995L20.8995 22.3137L16.6168 18.031C15.0769 19.263 13.124 20 11 20C6.032 20 2 15.968 2 11C2 6.032 6.032 2 11 2C15.968 2 20 6.032 20 11C20 13.124 19.263 15.0769 18.031 16.6168ZM16.0247 15.8748C17.2475 14.6146 18 12.8956 18 11C18 7.1325 14.8675 4 11 4C7.1325 4 4 7.1325 4 11C4 14.8675 7.1325 18 11 18C12.8956 18 14.6146 17.2475 15.8748 16.0247L16.0247 15.8748Z"
+                        fill="#efeff1"></path>
+                </svg>
+            </button>
+        </div>
+    </div>
+
+    <!-- JavaScript para mostrar/ocultar a barra de pesquisa -->
+    <script>
+        function toggleSearch() {
+            var searchContainer = document.getElementById("searchContainer");
+            if (searchContainer.style.display === "none" || searchContainer.style.display === "") {
+                searchContainer.style.display = "flex";
+            } else {
+                searchContainer.style.display = "none";
+            }
+        }
+    </script>
 </body>
 
 </html>
